--- a/ots_cluster_create/templates/host2pwd.j2
+++ b/ots_cluster_create/templates/host2pwd.j2
@@ -1,1 +1,9 @@
-{{ host_esx_password }}
+{% if hypervisor == "ESX" %}
+
+   {{ host_esx_password }}
+
+{% else %}
+
+   {{ host_kvm_password }}
+
+{% endif %}
